Fixed button alignment and output box alignment

--- a/styles.css
+++ b/styles.css
@@ -13,13 +13,13 @@ body{
 .calculator-grid{
     display: grid;
     justify-content: center;
-    align-items: center;
+    align-content: center;
     min-height: 100vh;
     grid-template-columns: repeat(4, 100px);
     grid-template-rows: minmax(120px, auto) repeat(5, 100px);
 }
 
-.calculator-grid > button{
+.calculator-grid > button {
     cursor: pointer;
     font-size: 2rem;
     border: 1px solid white;
@@ -29,4 +29,14 @@ body{
 
 .calculator-grid > button:hover{
     background-color: rgba(255, 255, 255, .9);
+}
+.span-two {
+    grid-column: span 2;
+}
+.output {
+    grid-column: 1 / -1;
+    background-color: rgba(0, 0, 0, .75);
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
 }
